Add refresh token, refactor User